# Test

MiniMax-MCP-main/: .env.example  .gitignore  LICENSE  README-CN.md  README.md  mcp_server_config_demo.json  pyproject.toml
MiniMax-MCP-main/minimax_mcp/: __init__.py  __main__.py  client.py  const.py  server.py  utils.py
MiniMax-MCP-main/tests/: test_utils.py
python_work/: testnew.java
test/: Hello.java  pom.xml
test/src/main/java/org/example/: AudioDurationParser.java  AudioToByteArray.java  ChatAPITester.java  Main.java  TTSClient.java  Test.java  TestInterface.java  testnew.java  ttest.java
test/src/main/java/org/example/dao/: SystemVoiceDto.java  Test1.java  VoiceCloningDto.java  VoiceGenerationDto.java
test/src/main/java/test/: GetImg.java  GetVideo.java
test_threahed/: pom.xml
test_threahed/src/main/java/org/example/: TestApplication.java  TestThead.java  TestThreadPool.java  TimeoutController.java
untitled/: pom.xml
untitled/src/main/java/org/example/: GCOverheadDemo.java  OpenAiChatMessage.java
untitled/src/main/resources/: log4j2-appprod.xml
